--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .sidebar {
-    width: 300px;
+    width: 320px;
     min-height: 100vh;
     margin-top: 30px;
     margin-right: 15px;
@@ -14,9 +14,10 @@
 }
 
 .content {
+    position: relative;
     align-items: center;
     width: 95%;
-    margin: 30px 30px 30px 0;
+    margin: 10px 30px 30px 0;
     border-radius: 30px;
     padding: 15px;
 }
@@ -41,4 +42,10 @@
     justify-content: center;
     margin-top: 10px;
     gap: 20px;
+}
+
+.loading {
+    position: absolute;
+    left: 50%;
+    top: 40%;
 }
